// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not show a header entry for column entries that are hidden 1`] = `
<div
  className="columnHeaders"
>
  <ForwardRef(Input)
    checked={false}
    className="hidden"
    onChange={[Function]}
    type="checkbox"
  />
  <Tooltip
    content="Name"
    key="0"
    overflowOnly={true}
  >
    <div
      className="name"
    >
      <span
        onClick={[Function]}
      >
        Name
      </span>
    </div>
  </Tooltip>
  <Tooltip
    content="Another Column"
    key="1"
    overflowOnly={true}
  >
    <div
      className="meta"
    >
      <span
        onClick={[Function]}
      >
        Another Column
      </span>
    </div>
  </Tooltip>
</div>
`;

exports[`should show a column header if specified 1`] = `
<div
  className="columnHeaders"
>
  <ForwardRef(Input)
    checked={false}
    className="hidden"
    onChange={[Function]}
    type="checkbox"
  />
  <Tooltip
    content="Name"
    key="0"
    overflowOnly={true}
  >
    <div
      className="name"
    >
      <span
        onClick={[Function]}
      >
        Name
      </span>
    </div>
  </Tooltip>
  <Tooltip
    content="Meta 1"
    key="1"
    overflowOnly={true}
  >
    <div
      className="meta"
    >
      <span
        onClick={[Function]}
      >
        Meta 1
      </span>
    </div>
  </Tooltip>
  <Tooltip
    content="Meta 2"
    key="2"
    overflowOnly={true}
  >
    <div
      className="meta"
    >
      <span
        onClick={[Function]}
      >
        Meta 2
      </span>
    </div>
  </Tooltip>
  <Tooltip
    content="Meta 3"
    key="3"
    overflowOnly={true}
  >
    <div
      className="meta"
    >
      <span
        onClick={[Function]}
      >
        Meta 3
      </span>
    </div>
  </Tooltip>
</div>
`;
